# identity-credential

./: README.md  pyproject.toml
docs/: architecture.md
docs/architecture-package-v1/: 01-system-architecture-specification.md  02-domain-model-specification.md  03-database-specification.md  04-template-engine-specification.md  05-printing-engine-specification.md  06-photo-intelligence-specification.md  07-security-audit-specification.md  08-backup-recovery-specification.md  09-ui-ux-blueprint.md  10-development-standards-specification.md  11-review-register.md
src/uicmp/: __init__.py
src/uicmp/application/: services.py
src/uicmp/domain/: enums.py  models.py
src/uicmp/infrastructure/: offline.py
tests/: test_lifecycle.py  test_offline_policy.py
