[project]
name = "uicmp"
version = "0.1.0"
description = "Offline-only Universal Identity & Credential Management Platform"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2",
  "SQLAlchemy>=2",
  "PySide6>=6",
  "reportlab>=4",
  "pillow>=10",
  "opencv-python>=4",
  "qrcode>=7",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
